--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@remix-run/react": "^1.4.3",
     "@remix-run/vercel": "^1.4.3",
     "@vercel/node": "^1.14.0",
+    "front-matter": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "@remix-run/dev": "^1.4.3",
     "@remix-run/eslint-config": "^1.4.3",
     "@remix-run/serve": "^1.4.3",
